# CareCenter-for-Codex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.de.md  README.md  SECURITY.md  STORE_LISTING.md  SUPPORT.md  THIRD_PARTY_LICENSES.txt  build_exe.bat  debug.bat  llms.txt  pyproject.toml  requirements.txt  start.bat  store_package.json
.github/workflows/: pages.yml  tests.yml
docs/: privacy.md  support.md
scripts/: build_store_pages.py
src/codex_logdatenbank_wartung/: __init__.py  automation_control.py  cli.py  config.py  config_audit.py  health.py  i18n.py  main.py  maintenance.py  mark_runs_read.py  orchestrator.py  processes.py  repair_live.py  repair_workflow.py  safe_start_integration.py  scheduler.py  single_instance.py  start_repair.py  store_release.py  store_repair.py  store_screenshot.py  thread_hygiene.py  tray.py  tray_app.py  (+1 more)
tests/: test_accessibility.py  test_app_logging.py  test_archive.py  test_automation_control.py  test_backup_retention.py  test_cli.py  test_config.py  test_config_audit.py  test_health.py  test_i18n.py  test_launch_scripts.py  test_maintenance.py  test_mark_runs_read.py  test_orchestrator.py  test_processes.py  test_repair_live.py  test_repair_workflow.py  test_safe_start_integration.py  test_scheduler.py  test_start_repair.py  test_store_pages.py  test_store_release.py  test_store_repair.py  test_store_screenshot.py  test_taskplan_contracts.py  test_thread_hygiene.py  test_tray_app.py  test_tray_running_state.py  test_tray_threading.py  test_watchdog.py  test_watchdog_audit.py
(+2 files in other folders)
