[project]
name = "carecenter-for-codex"
version = "0.6.2"
description = "Unofficial local Windows tray + CLI to repair, clean up and maintain the OpenAI Codex desktop app"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Lukas Geiger" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "PySide6>=6.7",
    "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
build = [
    "pyinstaller>=6.0",
    "hatchling>=1.25",
]

[project.scripts]
codex-logwartung = "codex_logdatenbank_wartung.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_logdatenbank_wartung"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v"
testpaths = ["tests"]
pythonpath = ["src"]
